--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
         <div class="card-body " >
             <div id="error-container"></div>
-            <input id="room" type="text" nme="room" value="" placeholder="Enter room name!">
+            <input id="room" type="text"  style="width: 85%" nme="room" value="" placeholder="Join room 'covid', 'java' or create a new group">
             <button type="button" name="button" onclick="joinRoom()">
                 Join Room!
             </button>
