--- a/userLogIn/signUp.html
+++ b/userLogIn/signUp.html
@@ -77,6 +77,7 @@
 
             if(result.status === 'ok'){
                 alert('User Created Successfully')
+                window.open("http://localhost:5000/userLogIn/login.html")
             }else{
                 alert(result.error)
             }
